styles/main.css
@font-face {
font-family:'Material Icons';
font-style:normal;
font-weight:400;
src:local('Material Icons'),local(MaterialIcons-Regular),url(fonts/icons.woff2) format("woff2")
}

@font-face {
  font-family: 'Material Icons';
  font-style: normal;
  font-weight: 400;
  src: local('Material Icons'), local('MaterialIcons-Regular'), url(fonts/icons.ttf) format('truetype');
}

.material-icons {
  font-family: 'Material Icons';
  font-weight: normal;
  font-style: normal;
  font-size: 24px;
  line-height: 1;
  letter-spacing: normal;
  text-transform: none;
  display: inline-block;
  white-space: nowrap;
  word-wrap: normal;
  direction: ltr;
  -webkit-font-smoothing: antialiased;
}
/* cyrillic */
@font-face {
  font-family: 'Playfair Display';
  font-style: normal;
  font-weight: 400;
  src: local('Playfair Display'), local('PlayfairDisplay-Regular'), url(fonts/pfdc.woff2) format('woff2');
  unicode-range: U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
}
/* latin-ext */
@font-face {
  font-family: 'Playfair Display';
  font-style: normal;
  font-weight: 400;
  src: local('Playfair Display'), local('PlayfairDisplay-Regular'), url(fonts/pdfe.woff2) format('woff2');
  unicode-range: U+0100-024F, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF;
}
/* latin */
@font-face {
  font-family: 'Playfair Display';
  font-style: normal;
  font-weight: 400;
  src: local('Playfair Display'), local('PlayfairDisplay-Regular'), url(fonts/pdfl.woff2) format('woff2');
  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
}
@font-face {
  font-family: 'Playfair Display';
  font-style: normal;
  font-weight: 400;
  src: local('Playfair Display'), local('PlayfairDisplay-Regular'), url(fonts/pfd.ttf) format('truetype');
}

/* latin */
@font-face {
  font-family: 'Share Tech Mono';
  font-style: normal;
  font-weight: 400;
  src: local('Share Tech Mono'), local('ShareTechMono-Regular'), url(fonts/mst.woff2) format('woff2');
  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
}

@font-face {
  font-family: 'Share Tech Mono';
  font-style: normal;
  font-weight: 400;
  src: local('Share Tech Mono'), local('ShareTechMono-Regular'), url(fonts/stm.ttf) format('truetype');
}
/* latin */
@font-face {
  font-family: 'Vast Shadow';
  font-style: normal;
  font-weight: 400;
  src: local('Vast Shadow Regular'), local('VastShadow-Regular'), url(fonts/vsl.woff2) format('woff2');
  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
}
@font-face {
  font-family: 'Vast Shadow';
  font-style: normal;
  font-weight: 400;
  src: local('Vast Shadow Regular'), local('VastShadow-Regular'), url(fonts/vsl.ttf) format('truetype');
}
/* latin-ext */
@font-face {
  font-family: 'Libre Franklin';
  font-style: normal;
  font-weight: 700;
  src: local('Libre Franklin Bold'), local('LibreFranklin-Bold'), url(fonts/lfe.woff2) format('woff2');
  unicode-range: U+0100-024F, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF;
}
/* latin */
@font-face {
  font-family: 'Libre Franklin';
  font-style: normal;
  font-weight: 700;
  src: local('Libre Franklin Bold'), local('LibreFranklin-Bold'), url(fonts/lfl.woff2) format('woff2');
  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
}
@font-face {
  font-family: 'Libre Franklin';
  font-style: normal;
  font-weight: 700;
  src: local('Libre Franklin Bold'), local('LibreFranklin-Bold'), url(fonts/lfl.ttf) format('truetype');
}
a{
    font-family: 'Share Tech Mono', monospace;
}
.my-link{
    font-size: 18px !important;
}
.my-link:hover{
    background: #c9f6ff;
    border: 0px solid #c9f6ff;
    border-radius: 3px;
}
.my-link:active{
    background: #c9dcff;
    border: 1px solid #c9dcff;
    border-radius: 3px;
}
.my-section{
    text-align: center;
    margin-bottom: 45px;
    margin-top: -25px;
}
.my-name{
    font-family: 'Vast Shadow', cursive;
    font-size: 36px;
    color: black;
}
.my-name:hover{
    color: black;
}
.my-name:active{
    color: black;
}
.my-heading{
    font-family: 'Vast Shadow', cursive;
    font-size: 37px;
    margin-top: 70px;
}
.my-heading-sub{
    font-size: 33px;
}
.my-mini-heading{
    font-family: 'Vast Shadow', cursive;
    font-weight: normal;
    font-size: 27px;
}
.my-mini-heading-sub{
    font-family: 'Share Tech Mono', monospace;
    font-weight: normal;    
    font-size: 14.5px;
}
.my-description{
    font-family: 'Share Tech Mono', monospace;
    font-size: 15;
    color: #4db6ac;
    margin-top: 5%;
}
.my-footer{
    position:fixed;
    bottom:0;
    display:block;
    font-family: 'Share Tech Mono', monospace;
    text-align: center;
    margin-bottom: 0px;
    font-size: 13px;
    width: 100%;
    background: white;
    z-index: 2;
    transition: transform 0.2s ease-in;
    will-change: transform;
}
.headroom--pinned {
  transform: translateY(0);
}
.headroom--unpinned {
  transform: translateY(+100%);
}
.my-imprint-link{
    font-size: 8.5px;
    padding-left: 8px;
    padding-right: 8px;
}
.my-imprint-link:hover{
    color: #38c1c1;
}
.my-text-body{
    font-family: 'Playfair Display', serif;
    font-size: 16px;
    margin-top: 20px;
}
.my-text-body h1,h2,h3,h4,h5,h6 {
    font-family: 'Libre Franklin', sans-serif;

    font-weight: bold;
    margin-bottom: 20px;
}
.my-text-body h1{
    font-size: 25px;
}
.my-text-body h2{
    font-size: 22px;
}
.my-text-body h3{
    font-size: 19px;
}
.my-text-body h4{
    font-size: 18px;
}
.my-text-body h5{
    font-size: 17px;
}
.my-text-body h6{
    font-size: 16px;
}
.my-text-author{
    font-size: 17px;
     font-family: 'Playfair Display', serif;
    margin: 30px 0 25px;
}
.my-text-body a{
    font-size: 16px;
}
.my-text-body a:hover{
    background: #c9f6ff;
    border: 0px solid #c9f6ff;
    border-radius: 3px;
}
.my-text-body a:active{
    background: #c9dcff;
    border: 0px solid #c9dcff;
    border-radius: 3px;
}

.my-twitter-link:hover{
    color: #1da0f2;
}
.my-linkedin-link:hover{
    color: #4875B4;
}
.my-github-link:hover{
    color: #e19e2f;
}
.my-mail-link:hover{
    color: #ea8462;
}
.my-item{
     font-family: 'Playfair Display', serif;    
    font-size: 16px;
    margin-bottom: 40px;
}
.my-item-sub{
    font-family: 'Share Tech Mono', monospace;
    font-size: 13px;
}
.my-tag{
    font-family: 'Share Tech Mono', monospace;
    font-size: 14.5px;
    color: #4db6ac;
}
#projects, #posts, #about{
    display: none;
}
img{
    max-width: 100%;
}
.headline-container{
    line-height: 50%;
    margin: 5%;
}
.button-bounds{
    padding-left: 5%;
    padding-right: 5%;
}
.social-button-padding{
    padding-left: 5%;
    padding-right: 5%;
}
.embed-container {
  position: relative;
  padding-bottom: 56.25%;
  height: 0;
  overflow: hidden;
  max-width: 100%;
}
.embed-container iframe, .embed-container object, .embed-container embed .embed-container img {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

.carousel {
  height: auto !important;
}

